--- a/src/app/todo-edit/todo-edit.component.html
+++ b/src/app/todo-edit/todo-edit.component.html
@@ -1,1 +1,35 @@
-<p>todo-edit works!</p>
+ <div class="row justify-content-center">
+   <div class="col-md-4 register-employee">
+     <!-- form card register -->
+     <div class="card card-outline-secondary">
+       <div class="card-header">
+         <h3 class="mb-0">Edit Todo</h3>
+       </div>
+       <div class="card-body">
+         <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
+
+           <div class="form-group">
+             <label for="inputTitle">Title</label>
+             <input class="form-control" type="text" formControlName="title">
+             <div class="invalid-feedback" *ngIf="submitted && myForm.title.errors?.required">
+               Title is required.
+             </div>
+           </div>
+
+          <div class="form-group">
+            <label for="inputDiscription">Description</label>
+            <textarea class="form-control" formControlName="description" rows="3"></textarea>
+            <!-- error -->
+            <div class="invalid-feedback" *ngIf="submitted && myForm.description.errors?.required">
+              Description is required.
+            </div>
+          </div>
+
+           <div class="form-group">
+             <button class="btn btn-success btn-lg btn-block" type="submit">Update</button>
+           </div>
+         </form>
+       </div>
+     </div><!-- form  -->
+   </div>
+ </div>
